fix issues shift table card

--- a/src/components/05-components/layout/_layout-base.scss
+++ b/src/components/05-components/layout/_layout-base.scss
@@ -291,7 +291,7 @@
 			background-color: $regular-white;
 			position: sticky;
 			top: 79px;
-			z-index: 3;
+			z-index: 4;
 
 			&:not(:empty) + .LayoutBase-secondary {
 				top: 132px;
